outputs/csi500-test/treevoo/2025-07-28_01-48-55/problem_iter28_response4.txt_stdout.txt
Traceback (most recent call last):
  File "/home/renjunji_2023/reevo/problems/csi500/eval.py", line 9, in <module>
    import gpt
  File "/home/renjunji_2023/reevo/problems/csi500/gpt.py", line 13
    df['true_range'] = df[['high' - 'low', 'high' - 'close'].shift(1).abs(), ('low' - 'close').shift(1).abs()]].max(axis=1)
                                                                                                              ^
SyntaxError: unmatched ']'
